--- a/_includes/html-start.html
+++ b/_includes/html-start.html
@@ -12,7 +12,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Oswald Font </title>
+    <title>Muli Font </title>
             
 
 
