--- a/_includes/readme.html
+++ b/_includes/readme.html
@@ -1,3 +1,5 @@
 <hr>
 <p>
-Muli is a minimalist Sans Serif. Muli is designed mainly for use as a display font but is useable as a text font too. Muli has been designed to be used freely across the internet by web browsers on desktop computers, laptops and mobile devices.</p>
+Muli is a minimalist Sans Serif designed mainly for use as a display font but is useable as a text font too.</p>
+<p>Muli has been specifically designed to be used freely across the internet by desktop computers, laptops and mobile devices.</p>
+<p>Muli is released in four weights; light, book, medium and bold.</p>
