--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -28,7 +28,7 @@ header h1 {
   font-size: 48px;
   color: #eee;
   line-height: 1.2;
-text-transform:uppercase;
+/*text-transform:uppercase;*/
 }
 
 header h4 {
