--- a/_includes/specimen.html
+++ b/_includes/specimen.html
@@ -1,6 +1,6 @@
 <div style="font-family:mulimedium">
-<p style="font-size:6em; line-height:1.2em;">
-Fjordland</p>
+<p style="font-size:10em; line-height:1.2em;">
+Fjordland Chasm</p>
 <p style="font-size:3em; line-height:1.2em;">Archonic appleseed Bellingham bogomil Chokechain cromwell Debonaire diehard Elephant empathy</p>
 <p style="font-size:1.6em; line-height:1.2em;">Archonic appleseed Bellingham bogomil Chokechain cromwell Debonaire diehard Elephant empathy</p>
 </div>
