--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -23,7 +23,7 @@ header {
 }
 
 header h1 {
-  font-family: 'mulimedium', 'Helvetica Neue', Helvetica, Arial, serif; font-weight: 400;
+  font-family: 'mulimedium', 'Helvetica Neue', Helvetica, Arial, serif;
   letter-spacing: -1px;
   font-size: 48px;
   color: #eee;
