--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,9 +1,9 @@
 {% include html-start.html %}
-<div class="row">
-<div class="span12 offset2 headerBlanket">
+<div class="headerBlanket">
 {% include header-masthead.html %}
-{{ content }}</div>
+</div>
 <div class="span12 offset2 blanket">
+{% include pics.html %}
 {% include specimen.html %}
 {% include readme.html %}
 {% include license.html %}
