--- a/_includes/html-end.html
+++ b/_includes/html-end.html
@@ -1,4 +1,11 @@
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
+</div>
+
+<!-- JavaScript plugins (requires jQuery) -->
+<script src="http://code.jquery.com/jquery.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Optionally enable responsive features in IE8 -->
+<script src="js/respond.js"></script>
 </body>
 </html>
