--- a/_includes/html-start.html
+++ b/_includes/html-start.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
   <link href='http://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Muli:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
@@ -13,6 +13,8 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+      <!-- Latest compiled and minified JavaScript -->
+      <script src="bootstrap/js/bootstrap.min.js"></script>
     <title>Muli Font </title>
             
 
@@ -25,3 +27,4 @@
 
             </head>
             <body>
+      <div class="container">
